feat(records): implement end-to-end generic tenant-scoped Records platform (WF-42 - WF-53)
* Platform Foundation (WF-42 - WF-45): Add RecordType, RecordField, CrmRecord entities with JSONB storage, dynamic validation, display configurations, and full CRUD runtime.
* Mapping & Transformations (WF-46 - WF-47): Implement RecordMappingProfile supporting DIRECT/CUSTOM modes, 8 data transforms, path depth/size guards, and dry-run preview capabilities.
* Ingestion & Webhooks (WF-48 - WF-51): Expose unauthenticated public webhook endpoints with API_KEY/HMAC_SHA256 authentication, key rotation, 1MB size guards, and header/payload hash idempotency tracking (V56).
* Event Outbox & Workflow Trigger Integration (WF-52 - WF-53): Emit RECORD.RECEIVED canonical CRM events within single transactional boundary, update WorkflowMetadataService, and enable trigger metadata filter validation in WorkflowGraphValidationService.